testsuite/escript/interstring/interstring02.src
$"Hello, {world!"; // no new line on purpose...